--- a/index.html
+++ b/index.html
@@ -5,8 +5,60 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header>
+      <nav>
+        <a>
+          <img src="https://via.placeholder.com/150x100" width="100"
+            height="50" alt="Заглушка">
+        </a>
+        <ul>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <ul>
+          <li>
+            <button type="button">Корзина</button>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Студия "Нёрдс"</h1>
+      <section>
+        <h2>Наши услуги</h2>
+        <ul>
+          <li>
+            <h3>веб-сайты</h3>
+            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <button type="button">Заказать</button>
+          </li>
+          <li>
+            <h3>Приложения</h3>
+            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+            <button type="button">Заказать</button>
+          </li>
+          <li>
+            <h3>Презентации</h3>
+            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+            <button type="button">Заказать</button>
+          </li>
+          <li></li>
+          <li></li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <div>
+      <ul>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
+      </ul>
+      <p>Давайте дружить, это выгодно!</p>
+      <p>скидка 10% для друзей из социальных сетей.</p>
+      </div>
+    </footer>
   </body>
 </html>
