--- a/catalog.html
+++ b/catalog.html
@@ -29,13 +29,13 @@
       <section>
         <h2>Параметры</h2>
         <ul>
-          <h3>Сетка</h3>
+          <li><h3>Сетка</h3></li>
           <li>Адаптивная</li>
           <li>Фиксированная</li>
           <li>Резиновая</li>
         </ul>
         <ul>
-          <h3>Особенности</h3>
+          <li><h3>Особенности</h3></li>
           <li>Слайдер</li>
           <li>Блок преимуществ</li>
           <li>Новости</li>
@@ -45,6 +45,7 @@
         <button type="button">Показать</button>
       </section>
       <section>
+        <h2>Варианты работ</h2>
         <ul>
           <li><a href="#"><img src="#" width="100" height="200" alt="Sedona"></a></li>
           <li><a href="#"><img src="#" width="100" height="200" alt="Pink"></a></li>
