--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <main>
       <h1>Студия "Нёрдс"</h1>
       <section>
+        <h2>Промо</h2>
+        <p>Долго, дорого, скурпулезно.</p>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного
+        приложения.</p>
+        <a href="catalog.html">Узнать больше</a>
+      </section>
+      <section>
         <h2>Наши услуги</h2>
         <ul>
           <li>
@@ -44,9 +51,22 @@
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
             <button type="button">Заказать</button>
           </li>
-          <li></li>
-          <li></li>
         </ul>
+      </section>
+      <section>
+        <h2>Краткое описание</h2>
+        <p>Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математеческий
+        расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <ul>
+          <li><h3>Выполняем заказы на разработку</h3></li>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Статистика</h2>
       </section>
     </main>
     <footer>
