--- a/catalog.html
+++ b/catalog.html
@@ -8,8 +8,8 @@
     <header>
       <nav>
         <a>
-          <img src="https://via.placeholder.com/150x100" width="100"
-            height="50" alt="Заглушка">
+          <img src="img/catalog/nerds-logo.svg" width="160"
+            height="65" alt="Логотип">
         </a>
         <ul>
           <li><a href="#">Студия</a></li>
@@ -19,6 +19,8 @@
         </ul>
         <ul>
           <li>
+            <img src="img/catalog/basket-icon.svg" width="15" height="15"
+            alt="Корзина">
             <button type="button">Корзина</button>
           </li>
         </ul>
@@ -47,21 +49,32 @@
       <section>
         <h2>Варианты работ</h2>
         <ul>
-          <li><a href="#"><img src="#" width="100" height="200" alt="Sedona"></a></li>
-          <li><a href="#"><img src="#" width="100" height="200" alt="Pink"></a></li>
-          <li><a href="#"><img src="#" width="100" height="200" alt="Barbershop"></a></li>
-          <li><a href="#"><img src="#" width="100" height="200" alt="Mishka"></a></li>
-          <li><a href="#"><img src="#" width="100" height="200" alt="html-academy"></a></li>
-          <li><a href="#"><img src="#" width="100" height="200" alt="Kvast"></a></li>
+          <li><a href="#"><img src="img/catalog/img-sedona-jpg.jpg" width="360"
+            height="576" alt="Sedona"></a></li>
+          <li><a href="#"><img src="img/catalog/img-pink-jpg.jpg" width="100"
+            height="200" alt="Pink"></a></li>
+          <li><a href="#"><img src="img/catalog/img-barbershop-jpg.jpg"
+            width="100" height="200" alt="Barbershop"></a></li>
+          <li><a href="#"><img src="img/catalog/img-mishka-jpg.jpg" width="100"
+            height="200" alt="Mishka"></a></li>
+          <li><a href="#"><img src="img/catalog/img-aplus-jpg.jpg" width="100"
+            height="200" alt="A-plus"></a></li>
+          <li><a href="#"><img src="img/catalog/img-kvast-jpg.jpg" width="100"
+            height="200" alt="Kvast"></a></li>
         </ul>
       </section>
     </main>
     <footer>
       <div>
       <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="https://vk.com"><img src="img/catalog/vk-icon.svg"
+        width="26"
+        height="15" alt="vk-logo"></a></li>
+        <li><a href="https://facebook.com"><img src="img/catalog/fb-icon.svg"
+        width="12"
+        height="22" alt="fb-logo"></a></li>
+        <li><a href="https://instagram.com"><img src="img/catalog/insta-icon.svg"
+        width="21" height="21" alt="insta-logo"></a></li>
       </ul>
       <p>Давайте дружить, это выгодно!</p>
       <p>скидка 10% для друзей из социальных сетей.</p>
