--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <header>
       <nav>
         <a>
-          <img src="https://via.placeholder.com/150x100" width="100"
-            height="50" alt="Заглушка">
+          <img src="img/index/nerds-logo.svg" width="160"
+            height="65" alt="Логотип">
         </a>
         <ul>
           <li><a href="#">Студия</a></li>
@@ -19,6 +19,8 @@
         </ul>
         <ul>
           <li>
+            <img src="img/index/basket-icon.svg" width="15" height="15"
+            alt="Корзина">
             <button type="button">Корзина</button>
           </li>
         </ul>
@@ -37,16 +39,22 @@
         <h2>Наши услуги</h2>
         <ul>
           <li>
+            <img src="img/index/advantage-picture-red.png" width="300"
+            height="146" alt="веб-сайты">
             <h3>веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <button type="button">Заказать</button>
           </li>
           <li>
+            <img src="img/index/advantage-picture-green.png" width="300"
+            height="146" alt="приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
             <button type="button">Заказать</button>
           </li>
           <li>
+            <img src="img/index/advantage-picture-yellow.png" width="300"
+            height="146" alt="презентации">
             <h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
             <button type="button">Заказать</button>
@@ -72,9 +80,14 @@
     <footer>
       <div>
       <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="https://vk.com"><img src="img/index/vk-icon.svg" width="26"
+        height="15" alt="vk-logo"></a></li>
+        <li><a href="https://facebook.com"><img src="img/index/fb-icon.svg"
+          width="12"
+        height="22" alt="fb-logo"></a></li>
+        <li><a href="https://instagram.com"><img src="img/index/insta-icon.svg"
+          width="21"
+        height="21" alt="insta-logo"></a></li>
       </ul>
       <p>Давайте дружить, это выгодно!</p>
       <p>скидка 10% для друзей из социальных сетей.</p>
