--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <p>Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математеческий
         расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <p>Выполняем заказы на разработку</p>
         <ul>
-          <li><h3>Выполняем заказы на разработку</h3></li>
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для iOS и Android</li>
           <li>Слайдшоу и видео для корпоративных презентаций</li>
