--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -28,33 +29,42 @@
     </header>
     <main>
       <h1>Студия "Нёрдс"</h1>
-      <section>
-        <h2>Промо</h2>
-        <p>Долго, дорого, скурпулезно.</p>
-        <p>Математически выверенный дизайн для вашего сайта или мобильного
-        приложения.</p>
-        <a href="catalog.html">Узнать больше</a>
-      </section>
+      <div class="slider">
+        <div class="slider__wrapper">
+          <div class="slider__item">
+            <p>Долго, дорого, скурпулезно.</p>
+            <p>Математически выверенный дизайн для вашего сайта или мобильного
+            приложения.</p>
+            <a href="catalog.html">Узнать больше</a>
+          </div>
+          <div class="slider__item">
+            <p>Любим математику как никто другой.</p>
+            <p>Никакого креатива, только математические формулы
+              для расчета идеальных пропорций.</p>
+            <a href="catalog.html">Узнать больше</a>
+          </div>
+          <div class="slider__item">
+            <p>Только ночь, только хардкор</p>
+            <p>Работать днем, как все? Мы против этого. Ближе к полуночи
+              работа только начинается.</p>
+            <a href="catalog.html">Узнать больше</a>
+          </div>
+        </div>
+      </div>
       <section>
         <h2>Наши услуги</h2>
         <ul>
           <li>
-            <img src="img/index/advantage-picture-red.png" width="300"
-            height="146" alt="веб-сайты">
             <h3>веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <button type="button">Заказать</button>
           </li>
           <li>
-            <img src="img/index/advantage-picture-green.png" width="300"
-            height="146" alt="приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
             <button type="button">Заказать</button>
           </li>
           <li>
-            <img src="img/index/advantage-picture-yellow.png" width="300"
-            height="146" alt="презентации">
             <h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
             <button type="button">Заказать</button>
@@ -75,22 +85,59 @@
       </section>
       <section>
         <h2>Статистика</h2>
+        <p>С 2004 года любим точность во всём:</p>
+        <table>
+          <tr>
+            <td>146%</td>
+            <td>100%</td>
+            <td>50%</td>
+          </tr>
+          <tr>
+            <td>Уровень самоотдачи</td>
+            <td>Соблюдение сроков</td>
+            <td>Минимальная предоплата</td>
+          </tr>
+        </table>
+      </section>
+      <section>
+        <h2>Список партнеров</h2>
+        <ul>
+          <li>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="#" alt="Логотип HTML Academy">
+            </a>
+          </li>
+          <li>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="#" alt="Логотип Барбершопа">
+            </a>
+          </li>
+          <li>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="#" alt="Логотип PINK">
+            </a>
+          </li>
+          <li>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="#" alt="Логотип Mishka">
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
       <div>
-      <ul>
-        <li><a href="https://vk.com"><img src="img/index/vk-icon.svg" width="26"
-        height="15" alt="vk-logo"></a></li>
-        <li><a href="https://facebook.com"><img src="img/index/fb-icon.svg"
-          width="12"
-        height="22" alt="fb-logo"></a></li>
-        <li><a href="https://instagram.com"><img src="img/index/insta-icon.svg"
-          width="21"
-        height="21" alt="insta-logo"></a></li>
-      </ul>
-      <p>Давайте дружить, это выгодно!</p>
-      <p>скидка 10% для друзей из социальных сетей.</p>
+        <ul>
+          <li><a href="https://vk.com"><img src="img/index/vk-icon.svg"
+            width="26" height="15" alt="Логотип ВК"></a></li>
+          <li><a href="https://facebook.com"><img src="img/index/fb-icon.svg"
+          width="12" height="22" alt="Логотип фэйсбука"></a></li>
+          <li><a href="https://instagram.com"><img
+            src="img/index/insta-icon.svg" width="21" height="21"
+            alt="Логотип Инстаграма"></a></li>
+        </ul>
+        <p>Давайте дружить, это выгодно!</p>
+        <p>скидка 10% для друзей из социальных сетей.</p>
       </div>
     </footer>
   </body>
