--- a/catalog.html
+++ b/catalog.html
@@ -29,18 +29,20 @@
     </header>
     <main>
       <h1>Магазин готовых шаблонов</h1>
-      <nav>
-        <ul>
-          <p>Сортировать:</p>
-          <li><a href="#">По цене</a></li>
-          <li><a href="#">По типу</a></li>
-          <li><a href="#">По названию</a></li>
-          <li><a href="#"><img src="img/icon-up-dir.svg"
-            alt="По возрастанию"></a></li>
-          <li><a href="#"><img src="img/icon-down-dir.svg"
-            alt="Сортировка по убыванию"></a></li>
-        </ul>
-      </nav>
+      <section>
+        <h2>Сортировать:</h2>
+        <nav>
+          <ul>
+            <li><a href="#">По цене</a></li>
+            <li><a href="#">По типу</a></li>
+            <li><a href="#">По названию</a></li>
+            <li><a href="#"><img src="img/icon-up-dir.svg"
+              alt="По возрастанию"></a></li>
+            <li><a href="#"><img src="img/icon-down-dir.svg"
+              alt="Сортировка по убыванию"></a></li>
+          </ul>
+        </nav>
+      </section>
       <section>
         <h2>Параметры</h2>
         <form action="https://echo.htmlacademy.ru" method="post">
