--- a/catalog.html
+++ b/catalog.html
@@ -121,7 +121,8 @@
       </section>
       <section>
         <h2>Адрес и контакты</h2>
-        <img src="#" alt="Карта">
+        <img src="img/map" alt="Карта" width="1440" height="416">
+        <img src="img/map-marker" alt="Указатель" width="231" height="190">
         <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
       появится настоящая карта -->
       <div>
@@ -137,18 +138,13 @@
     </main>
     <footer>
       <div>
-      <ul>
-        <li><a href="https://vk.com"><img src="img/catalog/vk-icon.svg"
-        width="26"
-        height="15" alt="vk-logo"></a></li>
-        <li><a href="https://facebook.com"><img src="img/catalog/fb-icon.svg"
-        width="12"
-        height="22" alt="fb-logo"></a></li>
-        <li><a href="https://instagram.com"><img src="img/catalog/insta-icon.svg"
-        width="21" height="21" alt="insta-logo"></a></li>
-      </ul>
-      <p>Давайте дружить, это выгодно!</p>
-      <p>скидка 10% для друзей из социальных сетей.</p>
+        <ul>
+          <li><a href="https://vk.com" aria-label="Вконтакте"></a></li>
+          <li><a href="https://facebook.com" aria-label="Фэйсбук"></a></li>
+          <li><a href="https://instagram.com" aria-label="Инстаграм"></a></li>
+        </ul>
+        <p>Давайте дружить, это выгодно!</p>
+        <p>скидка 10% для друзей из социальных сетей.</p>
       </div>
     </footer>
     <section>
