Переделал графику, доделал формы для всего сайта

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <a>
-          <img src="img/catalog/nerds-logo.svg" width="160"
+          <img src="img/nerds-logo.svg" width="160"
             height="65" alt="Логотип">
         </a>
         <ul>
@@ -20,7 +20,7 @@
         </ul>
         <ul>
           <li>
-            <img src="img/catalog/basket-icon.svg" width="15" height="15"
+            <img src="img/basket-icon.svg" width="15" height="15"
             alt="Корзина">
             <button type="button">Корзина</button>
           </li>
@@ -105,17 +105,17 @@
       <section>
         <h2>Варианты работ</h2>
         <ul>
-          <li><a href="#"><img src="img/catalog/img-sedona-jpg.jpg" width="360"
+          <li><a href="#"><img src="img/img-sedona-jpg.jpg" width="360"
             height="576" alt="Sedona"></a></li>
-          <li><a href="#"><img src="img/catalog/img-pink-jpg.jpg" width="100"
+          <li><a href="#"><img src="img/img-pink-jpg.jpg" width="100"
             height="200" alt="Pink"></a></li>
-          <li><a href="#"><img src="img/catalog/img-barbershop-jpg.jpg"
+          <li><a href="#"><img src="img/img-barbershop-jpg.jpg"
             width="100" height="200" alt="Barbershop"></a></li>
-          <li><a href="#"><img src="img/catalog/img-mishka-jpg.jpg" width="100"
+          <li><a href="#"><img src="img/img-mishka-jpg.jpg" width="100"
             height="200" alt="Mishka"></a></li>
-          <li><a href="#"><img src="img/catalog/img-aplus-jpg.jpg" width="100"
+          <li><a href="#"><img src="img/img-aplus-jpg.jpg" width="100"
             height="200" alt="A-plus"></a></li>
-          <li><a href="#"><img src="img/catalog/img-kvast-jpg.jpg" width="100"
+          <li><a href="#"><img src="img/img-kvast-jpg.jpg" width="100"
             height="200" alt="Kvast"></a></li>
         </ul>
       </section>
