--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <a>
-          <img src="img/index/nerds-logo.svg" width="160"
+          <img src="img/nerds-logo.svg" width="160"
             height="65" alt="Логотип">
         </a>
         <ul>
@@ -20,7 +20,7 @@
         </ul>
         <ul>
           <li>
-            <img src="img/index/basket-icon.svg" width="15" height="15"
+            <img src="img/basket-icon.svg" width="15" height="15"
             alt="Корзина">
             <button type="button">Корзина</button>
           </li>
