Исправил названия картинок в разметке

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
       </section>
       <section>
         <h2>Адрес и контакты</h2>
-        <img src="img/map" alt="Карта" width="1440" height="416">
-        <img src="img/map-marker" alt="Указатель" width="231" height="190">
+        <img src="img/map.png" alt="Карта" width="1440" height="416">
+        <img src="img/map-marker.png" alt="Указатель" width="231" height="190">
         <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
       появится настоящая карта -->
       <div>
