--- a/catalog.html
+++ b/catalog.html
@@ -105,24 +105,24 @@
       <section>
         <h2>Варианты работ</h2>
         <ul>
-          <li><a href="#"><img src="img/img-sedona-jpg.jpg" width="360"
+          <li><a href="#"><img src="img/img-sedona.jpg" width="360"
             height="576" alt="Sedona"></a></li>
-          <li><a href="#"><img src="img/img-pink-jpg.jpg" width="100"
+          <li><a href="#"><img src="img/img-pink.jpg" width="100"
             height="200" alt="Pink"></a></li>
-          <li><a href="#"><img src="img/img-barbershop-jpg.jpg"
+          <li><a href="#"><img src="img/img-barbershop.jpg"
             width="100" height="200" alt="Barbershop"></a></li>
-          <li><a href="#"><img src="img/img-mishka-jpg.jpg" width="100"
+          <li><a href="#"><img src="img/img-mishka.jpg" width="100"
             height="200" alt="Mishka"></a></li>
-          <li><a href="#"><img src="img/img-aplus-jpg.jpg" width="100"
+          <li><a href="#"><img src="img/img-aplus.jpg" width="100"
             height="200" alt="A-plus"></a></li>
-          <li><a href="#"><img src="img/img-kvast-jpg.jpg" width="100"
+          <li><a href="#"><img src="img/img-kvast.jpg" width="100"
             height="200" alt="Kvast"></a></li>
         </ul>
       </section>
       <section>
         <h2>Адрес и контакты</h2>
-        <img src="img/map" alt="Карта" width="1440" height="416">
-        <img src="img/map-marker" alt="Указатель" width="231" height="190">
+        <img src="img/map.png" alt="Карта" width="1440" height="416">
+        <img src="img/map-marker.png" alt="Указатель" width="231" height="190">
         <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
       появится настоящая карта -->
       <div>
