Начал делать разметку

--- a/catalog.html
+++ b/catalog.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="stylesheet" href="fonts/web/roboto.woff">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="main-header">
+      <nav class="main-navigation">
         <a>
           <img src="img/nerds-logo.svg" width="160"
             height="65" alt="Логотип">
