--- a/index.html
+++ b/index.html
@@ -3,68 +3,70 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="stylesheet" href="fonts/web/roboto.woff">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <a>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="logo" href="index.html">
           <img src="img/nerds-logo.svg" width="160"
             height="65" alt="Логотип">
         </a>
-        <ul>
+        <ul class="site-navigation">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-        <ul>
+        <ul class="user-navigation">
           <li>
             <img src="img/basket-icon.svg" width="15" height="15"
             alt="Корзина">
-            <button type="button">Корзина</button>
+            <a class="cart" href="cart.html">Корзина</a>
           </li>
         </ul>
       </nav>
     </header>
     <main>
-      <h1>Студия "Нёрдс"</h1>
+      <h1 class="visually-hidden">Студия "Нёрдс"</h1>
       <div class="slider">
-        <div class="slider__wrapper">
-          <div class="slider__item">
-            <p>Долго, дорого, скурпулезно.</p>
-            <p>Математически выверенный дизайн для вашего сайта или мобильного
-            приложения.</p>
-            <a href="catalog.html">Узнать больше</a>
+        <div class="slider-wrapper">
+          <div class="slider-item">
+            <p class="slider-headline">Долго, дорого, скурпулезно.</p>
+            <p class="slider-description">Математически выверенный
+              дизайн для вашего сайта или мобильного приложения.</p>
+            <a class="button" href="catalog.html">Узнать больше</a>
           </div>
-          <div class="slider__item">
-            <p>Любим математику как никто другой.</p>
-            <p>Никакого креатива, только математические формулы
-              для расчета идеальных пропорций.</p>
-            <a href="catalog.html">Узнать больше</a>
+          <div class="slider-item">
+            <p class="slider-headline">Любим математику как никто другой.</p>
+            <p class="slider-description">Никакого креатива, только
+              математические формулы для расчета идеальных пропорций.</p>
+            <a class="button" href="catalog.html">Узнать больше</a>
           </div>
-          <div class="slider__item">
-            <p>Только ночь, только хардкор</p>
-            <p>Работать днем, как все? Мы против этого. Ближе к полуночи
-              работа только начинается.</p>
-            <a href="catalog.html">Узнать больше</a>
+          <div class="slider-item">
+            <p class="slider-headline">Только ночь, только хардкор</p>
+            <p class="slider-description">Работать днем, как все? Мы против
+              этого. Ближе к полуночи работа только начинается.</p>
+            <a class="button" href="catalog.html">Узнать больше</a>
           </div>
         </div>
       </div>
       <section>
-        <h2>Наши услуги</h2>
-        <ul>
-          <li>
+        <h2 class="visually-hidden">Наши услуги</h2>
+        <ul class="advantages">
+          <li class="advantages-item">
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <button type="button">Заказать</button>
           </li>
-          <li>
+          <li class="advantages-item">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
             <button type="button">Заказать</button>
           </li>
-          <li>
+          <li class="advantages-item">
             <h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
             <button type="button">Заказать</button>
