--- a/catalog.html
+++ b/catalog.html
@@ -10,44 +10,44 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a>
+        <a class="logo" href="index.html">
           <img src="img/nerds-logo.svg" width="160"
             height="65" alt="Логотип">
         </a>
-        <ul>
+        <ul class="site-navigation">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
           <li><a href="#">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-        <ul>
-          <li>
-            <img src="img/basket-icon.svg" width="15" height="15"
-            alt="Корзина">
-            <button type="button">Корзина</button>
-          </li>
+        <ul class="user-navigation">
+          <img src="img/basket-icon.svg" width="15" height="15"
+          alt="Корзина">
+          <a class="cart" href="cart.html">Корзина</a>
+        </li>
         </ul>
       </nav>
     </header>
     <main>
       <h1>Магазин готовых шаблонов</h1>
-      <section>
+      <section class="main-sorting">
         <h2>Сортировать:</h2>
         <nav>
-          <ul>
-            <li><a href="#">По цене</a></li>
-            <li><a href="#">По типу</a></li>
-            <li><a href="#">По названию</a></li>
-            <li><a href="#"><img src="img/icon-up-dir.svg"
+          <ul class="sorting-list">
+            <li><a class="sorting-price" href="#">По цене</a></li>
+            <li><a class="sorting-type" href="#">По типу</a></li>
+            <li><a class="sorting-label" href="#">По названию</a></li>
+            <li><a class="sorting-down" href="#"><img
+              src="img/icon-down-dir.svg" alt="Сортировка по убыванию"></a></li>
+            <li><a class="sorting-up" href="#"><img src="img/icon-up-dir.svg"
               alt="По возрастанию"></a></li>
-            <li><a href="#"><img src="img/icon-down-dir.svg"
-              alt="Сортировка по убыванию"></a></li>
           </ul>
         </nav>
       </section>
       <section>
-        <h2>Параметры</h2>
-        <form action="https://echo.htmlacademy.ru" method="post">
+        <h2 class="visually-hidden">Параметры</h2>
+        <form class="catalog-form" action="https://echo.htmlacademy.ru"
+          method="post">
           <fieldset>
             <legend>Стоимость</legend>
             <input type="range" name="range" min="0" max="15000"
@@ -105,51 +105,62 @@
         </form>
       </section>
       <section>
-        <h2>Варианты работ</h2>
-        <ul>
-          <li><a href="#"><img src="img/img-sedona.jpg" width="360"
-            height="576" alt="Sedona"></a></li>
-          <li><a href="#"><img src="img/img-pink.jpg" width="100"
-            height="200" alt="Pink"></a></li>
-          <li><a href="#"><img src="img/img-barbershop.jpg"
-            width="100" height="200" alt="Barbershop"></a></li>
-          <li><a href="#"><img src="img/img-mishka.jpg" width="100"
-            height="200" alt="Mishka"></a></li>
-          <li><a href="#"><img src="img/img-aplus.jpg" width="100"
-            height="200" alt="A-plus"></a></li>
-          <li><a href="#"><img src="img/img-kvast.jpg" width="100"
-            height="200" alt="Kvast"></a></li>
+        <h2 class="visually-hidden">Варианты работ</h2>
+        <ul class="work-examples">
+          <li>
+            <div class="example-sedona">
+              <a href="#"><img src="img/sedona.jpg" width="360"
+                height="576" alt="Sedona"></a>
+                <p class="sedona-label">Sedona</p>
+                <p class="sedona-description">Информационный сайт для туристов</p>
+                <a class="button sedona-price" href="#">9 900 руб.</a>
+            </div>
+          </li>
+          <li><a href="#"><img src="img/pink.jpg" width="360"
+            height="576" alt="Pink"></a></li>
+          <li><a href="#"><img src="img/barbershop.jpg"
+            width="360" height="576" alt="Barbershop"></a></li>
+          <li><a href="#"><img src="img/mishka.jpg" width="360"
+            height="576" alt="Mishka"></a></li>
+          <li><a href="#"><img src="img/aplus.jpg" width="360"
+            height="576" alt="A-plus"></a></li>
+          <li><a href="#"><img src="img/kvast.jpg" width="360"
+            height="576" alt="Kvast"></a></li>
         </ul>
       </section>
       <section>
-        <h2>Адрес и контакты</h2>
+        <h2 class="visually-hidden">Адрес и контакты</h2>
         <img src="img/map.png" alt="Карта" width="1440" height="416">
         <img src="img/map-marker.png" alt="Указатель" width="231" height="190">
         <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
       появится настоящая карта -->
-      <div>
-        <p>Nёrds design studio</p>
+      <div class="studio-contacts">
+        <p class="studio-label">Nёrds design studio</p>
         <p>
           191186, Санкт-Петербург,<br>
           ул. Б. Конюшенная, д. 19/8<br>
           тел. +7 (812) 275-75-75
         </p>
-        <button type="button">Напишите нам</button>
+        <button class="button" type="button">Напишите нам</button>
       </div>
       </section>
     </main>
-    <footer>
-      <div>
-        <ul>
-          <li><a href="https://vk.com" aria-label="Вконтакте"></a></li>
-          <li><a href="https://facebook.com" aria-label="Фэйсбук"></a></li>
-          <li><a href="https://instagram.com" aria-label="Инстаграм"></a></li>
+    <footer class="main-footer">
+        <ul class="social-networks">
+          <li><a class="logo-vk" href="https://vk.com" aria-label="Вконтакте">
+          Вконтакте</a></li>
+          <li><a class="logo-fb" href="https://facebook.com"
+            aria-label="Фэйсбук">Фэйсбук</a></li>
+          <li><a class="logo-insta" href="https://instagram.com"
+            aria-label="Инстаграм">Инстаграм</a></li>
         </ul>
-        <p>Давайте дружить, это выгодно!</p>
-        <p>скидка 10% для друзей из социальных сетей.</p>
-      </div>
+        <div class="footer-social">
+          <p class="footer-social-motto">Давайте дружить, это выгодно!</p>
+          <p class="footer-social-discount">Скидка 10% для друзей из социальных
+            сетей.</p>
+        </div>
     </footer>
-    <section>
+    <section class="pop-up">
       <h2>Напишите нам</h2>
       <form action="https://echo.htmlacademy.ru" method="post">
         <p>
