--- a/index.html
+++ b/index.html
@@ -59,98 +59,106 @@
           <li class="advantages-item">
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <button type="button">Заказать</button>
+            <a class="button" href="#">Заказать</a>
           </li>
           <li class="advantages-item">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-            <button type="button">Заказать</button>
+            <a class="button" href="#">Заказать</a>
           </li>
           <li class="advantages-item">
             <h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-            <button type="button">Заказать</button>
+            <a class="button" href="#">Заказать</a>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Краткое описание</h2>
-        <p>Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математеческий
-        расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <p>Выполняем заказы на разработку</p>
-        <ul>
+        <h2 class="visually-hidden">Краткое описание</h2>
+        <p class="description-heading">Мы - маленькая, но гордая дизайн-студия
+          из Краснодара.</p>
+        <p class="description">Исповедуем принципы минимализма и чистоты.
+          Ставим математеческийрасчет превыше креатива. Работаем не покладая
+           рук, как роботы.</p>
+        <p class="description-service">Выполняем заказы на разработку</p>
+        <ul class="description-service-item">
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для iOS и Android</li>
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
       </section>
       <section>
-        <h2>Статистика</h2>
-        <p>С 2004 года любим точность во всём:</p>
-        <table>
-          <tr>
-            <td>146%</td>
-            <td>100%</td>
-            <td>50%</td>
-          </tr>
-          <tr>
-            <td>Уровень самоотдачи</td>
-            <td>Соблюдение сроков</td>
-            <td>Минимальная предоплата</td>
-          </tr>
-        </table>
+        <h2 class="visually-hidden">Статистика</h2>
+        <div class="statistics">
+          <p>С 2004 года любим точность во всём:</p>
+          <table>
+            <tr class="statistics-percent">
+              <td>146<sup>%</sup></td>
+              <td>100<sup>%</sup></td>
+              <td>50<sup>%</sup></td>
+            </tr>
+            <tr class="statistics-description">
+              <td>Уровень самоотдачи</td>
+              <td>Соблюдение сроков</td>
+              <td>Минимальная предоплата</td>
+            </tr>
+          </table>
+        </div>
       </section>
       <section>
-        <h2>Список партнеров</h2>
-        <ul>
+        <h2 class="visually-hidden">Список партнеров</h2>
+        <ul class="partners">
           <li>
-            <a href="https://htmlacademy.ru/intensive/htmlcss"
+            <a class="html-ac" href="https://htmlacademy.ru/intensive/htmlcss"
             aria-label="Логотип HTML-Academy"></a>
           </li>
           <li>
-            <a href="https://htmlacademy.ru/intensive/htmlcss"
+            <a class="barber" href="https://htmlacademy.ru/intensive/htmlcss"
             aria-label="Логотип Барбершопа"></a>
           </li>
           <li>
-            <a href="https://htmlacademy.ru/intensive/htmlcss"
+            <a class="pink" href="https://htmlacademy.ru/intensive/htmlcss"
               aria-label="Логотип Pink"></a>
           </li>
           <li>
-            <a href="https://htmlacademy.ru/intensive/htmlcss"
+            <a class="mishka" href="https://htmlacademy.ru/intensive/htmlcss"
               aria-label="Логотип Mishka"></a>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Адрес и контакты</h2>
+        <h2 class="visually-hidden">Адрес и контакты</h2>
         <img src="img/map.png" alt="Карта" width="1440" height="416">
         <img src="img/map-marker.png" alt="Указатель" width="231" height="190">
         <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
       появится настоящая карта -->
-      <div>
-        <p>Nёrds design studio</p>
+      <div class="studio-contacts">
+        <p class="studio-label">Nёrds design studio</p>
         <p>
           191186, Санкт-Петербург,<br>
           ул. Б. Конюшенная, д. 19/8<br>
           тел. +7 (812) 275-75-75
         </p>
-        <button type="button">Напишите нам</button>
+        <button class="button" type="button">Напишите нам</button>
       </div>
       </section>
     </main>
-    <footer>
-      <div>
-        <ul>
-          <li><a href="https://vk.com" aria-label="Вконтакте"></a></li>
-          <li><a href="https://facebook.com" aria-label="Фэйсбук"></a></li>
-          <li><a href="https://instagram.com" aria-label="Инстаграм"></a></li>
+    <footer class="main-footer">
+        <ul class="social-networks">
+          <li><a class="logo-vk" href="https://vk.com" aria-label="Вконтакте">
+          Вконтакте</a></li>
+          <li><a class="logo-fb" href="https://facebook.com"
+            aria-label="Фэйсбук">Фэйсбук</a></li>
+          <li><a class="logo-insta" href="https://instagram.com"
+            aria-label="Инстаграм">Инстаграм</a></li>
         </ul>
-        <p>Давайте дружить, это выгодно!</p>
-        <p>скидка 10% для друзей из социальных сетей.</p>
-      </div>
+        <div class="footer-social">
+          <p class="footer-social-motto">Давайте дружить, это выгодно!</p>
+          <p class="footer-social-discount">Скидка 10% для друзей из социальных
+            сетей.</p>
+        </div>
     </footer>
-    <section>
+    <section class="pop-up">
       <h2>Напишите нам</h2>
       <form action="https://echo.htmlacademy.ru" method="post">
         <p>
