Внес изменения по замечаниям

--- a/catalog.html
+++ b/catalog.html
@@ -109,11 +109,13 @@
         <ul class="work-examples">
           <li>
             <div class="example-sedona">
-              <a href="#"><img src="img/sedona.jpg" width="360"
-                height="576" alt="Sedona"></a>
+              <a href="#">
+                <img src="img/sedona.jpg" width="360"
+                height="576" alt="Sedona">
                 <p class="sedona-label">Sedona</p>
-                <p class="sedona-description">Информационный сайт для туристов</p>
-                <a class="button sedona-price" href="#">9 900 руб.</a>
+              </a>
+              <p class="sedona-description">Информационный сайт для туристов</p>
+              <a class="button sedona-price" href="#">9 900 руб.</a>
             </div>
           </li>
           <li><a href="#"><img src="img/pink.jpg" width="360"
@@ -135,7 +137,7 @@
         <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
       появится настоящая карта -->
       <div class="studio-contacts">
-        <p class="studio-label">Nёrds design studio</p>
+        <h3 class="studio-label">Nёrds design studio</h3>
         <p>
           191186, Санкт-Петербург,<br>
           ул. Б. Конюшенная, д. 19/8<br>
