--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       </section>
       <section>
         <h2 class="visually-hidden">Краткое описание</h2>
-        <p class="description-heading">Мы - маленькая, но гордая дизайн-студия
-          из Краснодара.</p>
+        <h3 class="description-heading">Мы - маленькая, но гордая дизайн-студия
+          из Краснодара.</h3>
         <p class="description">Исповедуем принципы минимализма и чистоты.
           Ставим математеческийрасчет превыше креатива. Работаем не покладая
            рук, как роботы.</p>
@@ -133,7 +133,7 @@
         <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
       появится настоящая карта -->
       <div class="studio-contacts">
-        <p class="studio-label">Nёrds design studio</p>
+        <h3 class="studio-label">Nёrds design studio</h3>
         <p>
           191186, Санкт-Петербург,<br>
           ул. Б. Конюшенная, д. 19/8<br>
