--- a/catalog.html
+++ b/catalog.html
@@ -108,26 +108,62 @@
         <h2 class="visually-hidden">Варианты работ</h2>
         <ul class="work-examples">
           <li>
-            <div class="example-sedona">
-              <a href="#">
-                <img src="img/sedona.jpg" width="360"
-                height="576" alt="Sedona">
-                <p class="sedona-label">Sedona</p>
-              </a>
-              <p class="sedona-description">Информационный сайт для туристов</p>
-              <a class="button sedona-price" href="#">9 900 руб.</a>
+            <img src="img/sedona.jpg" width="360"
+              height="576" alt="Sedona">
+            <div class="example-item">
+              <p class="example-item-label"><a href="#">Sedona</a></p>
+              <p class="example-item-description">Информационный сайт для
+                туристов</p>
+              <p class="button example-item-price">9 900 руб.</p>
             </div>
           </li>
-          <li><a href="#"><img src="img/pink.jpg" width="360"
-            height="576" alt="Pink"></a></li>
-          <li><a href="#"><img src="img/barbershop.jpg"
-            width="360" height="576" alt="Barbershop"></a></li>
-          <li><a href="#"><img src="img/mishka.jpg" width="360"
-            height="576" alt="Mishka"></a></li>
-          <li><a href="#"><img src="img/aplus.jpg" width="360"
-            height="576" alt="A-plus"></a></li>
-          <li><a href="#"><img src="img/kvast.jpg" width="360"
-            height="576" alt="Kvast"></a></li>
+          <li>
+            <img src="img/pink.jpg" width="360"
+              height="576" alt="Pink">
+            <div class="example-item">
+              <p class="example-item-label"><a href="#">Pink App</a></p>
+              <p class="example-item-description">Продуктовый лендинг
+                приложения для iOS и Android</p>
+              <p class="button example-item-price">9 900 руб.</p>
+            </div>
+          </li>
+          <li>
+            <img src="img/barbershop.jpg"width="360" height="576"
+              alt="Barbershop">
+            <div class="example-item">
+              <p class="example-item-label"><a href="#">Barbershop</a></p>
+              <p class="example-item-description">Сайт салона красоты. Для
+                мужчин, да.</p>
+              <p class="button example-item-price">9 900 руб.</p>
+            </div>
+          </li>
+          <li>
+            <img src="img/mishka.jpg" width="360" height="576" alt="Mishka">
+            <div class="example-item">
+              <p class="example-item-label"><a href="#">Mishka</a></p>
+              <p class="example-item-description">Интернет-магазин
+                вязаных игрушек</p>
+              <p class="button example-item-price">9 900 руб.</p>
+            </div>
+          </li>
+          <li>
+            <img src="img/aplus.jpg" width="360" height="576" alt="A-plus">
+            <div class="example-item">
+              <p class="example-item-label"><a href="#">A Plus</a></p>
+              <p class="example-item-description">Лендинг курсов повышения
+                квалификации</p>
+              <p class="button example-item-price">9 900 руб.</p>
+            </div>
+          </li>
+          <li>
+            <img src="img/kvast.jpg" width="360" height="576" alt="Kvast">
+            <div class="example-item">
+              <p class="example-item-label"><a href="#">Кваст</a></p>
+              <p class="example-item-description">Промо-сайт производителя
+                крафтового кваса</p>
+              <p class="button example-item-price">9 900 руб.</p>
+            </div>
+          </li>
         </ul>
       </section>
       <section>
