--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
       </section>
       <section>
         <h2 class="visually-hidden">Статистика</h2>
-        <div class="statistics">
+        <div class="statistic">
           <p>С 2004 года любим точность во всём:</p>
           <table>
-            <tr class="statistics-percent">
+            <tr class="statistic-percent">
               <td>146<sup>%</sup></td>
               <td>100<sup>%</sup></td>
               <td>50<sup>%</sup></td>
             </tr>
-            <tr class="statistics-description">
+            <tr class="statistic-description">
               <td>Уровень самоотдачи</td>
               <td>Соблюдение сроков</td>
               <td>Минимальная предоплата</td>
