--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
       <div class="slider">
         <div class="slider-wrapper">
           <div class="slider-item">
-            <p class="slider-headline">Долго, дорого, скурпулезно.</p>
-            <p class="slider-description">Математически выверенный
-              дизайн для вашего сайта или мобильного приложения.</p>
-            <a class="button" href="catalog.html">Узнать больше</a>
+            <div class="slider-item-text">
+              <p class="slider-headline">Долго, дорого, скурпулезно.</p>
+              <p class="slider-description">Математически выверенный
+                дизайн<br> для вашего сайта или мобильного приложения.</p>
+              <a class="button" href="catalog.html">Узнать больше</a>
+            </div>
           </div>
+          <div class="visually-hidden">
           <div class="slider-item">
             <p class="slider-headline">Любим математику как никто другой.</p>
             <p class="slider-description">Никакого креатива, только
@@ -50,6 +53,7 @@
             <a class="button" href="catalog.html">Узнать больше</a>
           </div>
         </div>
+      </div>
       </div>
       <section>
         <h2 class="visually-hidden">Наши услуги</h2>
