Переделал блок с описанием.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="button" href="catalog.html">Узнать больше</a>
             </div>
           </div>
-          <div class="slider-item">
+          <div class="slider-item visually-hidden">
             <div class="slider-item-description">
               <h3>Любим математику как никто другой.</h3>
               <p>Никакого креатива, только математические формулы для расчета
@@ -47,7 +47,7 @@
               <a class="button" href="catalog.html">Узнать больше</a>
             </div>
           </div>
-          <div class="slider-item">
+          <div class="slider-item visually-hidden">
             <div class="slider-item-description">
               <h3>Только ночь,<br> только хардкор</h3>
               <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи
@@ -79,16 +79,13 @@
       </section>
       <div class="main-information">
         <section class="short-description">
-          <h2 class="visually-hidden">Краткое описание</h2>
-          <h3>Мы - маленькая, но гордая дизайн-студия
-            из Краснодара.</h3>
+          <h2>Мы - маленькая, но гордая дизайн-студия
+            из Краснодара.</h2>
           <p class="description">Исповедуем принципы минимализма и чистоты.
             Ставим математеческий расчет превыше креатива. Работаем не покладая
              рук, как роботы.</p>
+          <h3 class="description-service-heading">Выполняем заказы на разработку:</h3>
           <ul class="description-service">
-            <li>
-              <h3 class="description-service-heading">Выполняем заказы на разработку:</h3>
-            </li>
             <li>Веб-сайтов любой сложности</li>
             <li>Мобильных приложений для iOS и Android</li>
             <li>Слайдшоу и видео для корпоративных презентаций</li>
