--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
               <p>С 2004 года любим точность во всём:</p>
               <table>
                 <tr class="statistic-percent">
-                  <td>146<sup>%</sup></td>
-                  <td>100<sup>%</sup></td>
-                  <td>50<sup>%</sup></td>
+                  <td style="width: 95px">146<sup>%</sup></td>
+                  <td style="width: 95px">100<sup>%</sup></td>
+                  <td style="width: 105px">50<sup>%</sup></td>
                 </tr>
                 <tr class="statistic-description">
                   <td>Уровень самоотдачи</td>
