Исправил замечания, плюс поделал страницу каталога
Насколько я вижу, мне осталось из верстки доделать два фильтра и сделать попап

--- a/index.html
+++ b/index.html
@@ -119,20 +119,28 @@
           <h2 class="visually-hidden">Список партнеров</h2>
           <ul class="partners">
             <li>
-              <a class="html-academy" href="https://htmlacademy.ru/intensive/htmlcss"
-              aria-label="Логотип HTML-Academy"></a>
+              <a class="html-academy" href="https://htmlacademy.ru/intensive/htmlcss">
+                 <img src="img/htmlacademy-logo.png" width="199"
+                   height="68" alt="Логотип HTML-Academy">
+              </a>
             </li>
             <li>
-              <a class="barber" href="#"
-                aria-label="Логотип Барбершопа"></a>
+              <a class="barbershop" href="#">
+                 <img src="img/borodinski-logo.png" width="209"
+                   height="90" alt="Логотип Барбершопа">
+              </a>
             </li>
             <li>
-              <a class="pink" href="#"
-                aria-label="Логотип Pink"></a>
+              <a class="pink" href="#">
+                 <img src="img/pink-logo.png" width="185"
+                   height="52" alt="Логотип Барбершопа">
+              </a>
             </li>
             <li>
-              <a class="mishka" href="#"
-                aria-label="Логотип Mishka"></a>
+              <a class="mishka" href="#">
+                 <img src="img/mishka-logo.png" width="173"
+                   height="84" alt="Логотип Барбершопа">
+              </a>
             </li>
           </ul>
         </section>
