--- a/catalog.html
+++ b/catalog.html
@@ -37,15 +37,23 @@
         <section class="inner-filter">
           <h2 class="visually-hidden">Параметры</h2>
           <form class="catalog-form" action="https://echo.htmlacademy.ru"
-            method="post">
-            <fieldset>
-              <legend>Стоимость</legend>
-              <input type="range" name="range" min="0" max="15000"
-               step="1" value="10000">
-               <p>
-                 От <span>0</span> до <span>15000</span>
-               </p>
-            </fieldset>
+            method="get">
+            <fieldset class="filter-item">
+        <legend>Стоимость:</legend>
+        <div class="range-filter">
+          <div class="range-controls">
+            <div class="scale">
+              <div class="bar" style="margin-left: 0; width: 70%"></div>
+            </div>
+            <div class="toggle toggle-min"></div>
+            <div class="toggle toggle-max"></div>
+          </div>
+          <div class="price-controls">
+            <label class="min-price">от <input name="min-price" type="number" value="0"></label>
+            <label class="max-price">до <input name="max-price" type="number" value="15000"></label>
+          </div>
+        </div>
+      </fieldset>
             <fieldset>
               <legend>Сетка</legend>
               <ul>
@@ -91,17 +99,19 @@
                 </li>
               </ul>
             </fieldset>
-            <button type="submit">Показать</button>
+            <button class="button filter-button" type="submit">Показать</button>
           </form>
         </section>
         <div class="main-sorting-and-examples">
           <section class="main-sorting">
             <h2>Сортировать:</h2>
-            <nav>
-              <ul class="sorting-list">
+            <nav class="sorting-list">
+              <ul class="sorting-parametrs">
                 <li><a class="sorting-price" href="#">По цене</a></li>
                 <li><a class="sorting-type" href="#">По типу</a></li>
                 <li><a class="sorting-label" href="#">По названию</a></li>
+              </ul>
+              <ul class="up-down-sorting">
                 <li><a class="sorting-down" href="#"><img
                   src="img/icon-down-dir.svg" alt="Сортировка по убыванию"></a></li>
                 <li><a class="sorting-up" href="#"><img src="img/icon-up-dir.svg"
@@ -169,6 +179,12 @@
                   <p class="button example-item-price">9 900 руб.</p>
                 </div>
               </li>
+            </ul>
+            <ul class="pagination-list">
+              <li class="pagination-item  pagination-item-current"><a href="#">1</a></li>
+              <li class="pagination-item"><a>2</a></li>
+              <li class="pagination-item"><a href="#">3</a></li>
+              <li class="pagination-item"><a href="#">Следующая</a></li>
             </ul>
           </section>
         </div>
