--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                 <p>С 2004 года любим точность во всём:</p>
                 <table>
                   <tr class="statistic-percent">
-                    <td style="width: 95px">146<sup>%</sup></td>
-                    <td style="width: 95px">100<sup>%</sup></td>
-                    <td style="width: 105px">50<sup>%</sup></td>
+                    <td>146<sup>%</sup></td>
+                    <td>100<sup>%</sup></td>
+                    <td>50<sup>%</sup></td>
                   </tr>
                   <tr class="statistic-description">
                     <td>Уровень самоотдачи</td>
@@ -160,7 +160,7 @@
                 ул. Б. Конюшенная, д. 19/8
             </p>
             <p>тел. +7 (812) 275-75-75</p>
-            <button class="button" type="button">Напишите нам</button>
+            <button class="button modal-open" type="button">Напишите нам</button>
           </div>
         </div>
       </section>
@@ -216,10 +216,11 @@
           <textarea name="letter" placeholder="В свободной форме"
             id="field-letter"></textarea>
         </p>
-        <button class="button" type="submit">Отправить</button>
+        <button class="button modal-" type="submit">Отправить</button>
       </form>
       <button class="modal-close" type="button">
       </button>
     </section>
+    <script src="js/modal.js"></script>
   </body>
 </html>
