--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
           <ul class="site-navigation">
             <li><a href="#">Студия</a></li>
             <li><a href="#">Клиенты</a></li>
-            <li><a href="catalog.html">Магазин</a></li>
+            <li class="current-page"><a href="catalog.html">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
           <ul class="user-navigation">
@@ -115,14 +115,14 @@
             <h2>Сортировать:</h2>
             <nav class="sorting-list">
               <ul class="sorting-parametrs">
-                <li><a class="sorting-price" href="#">По цене</a></li>
-                <li><a class="sorting-type" href="#">По типу</a></li>
-                <li><a class="sorting-label" href="#">По названию</a></li>
+                <li class=" list-parametr current-parametr"><a class="sorting-price" href="#">По цене</a></li>
+                <li class="list-parametr"><a class="sorting-type" href="#">По типу</a></li>
+                <li class="list-parametr"><a class="sorting-label" href="#">По названию</a></li>
               </ul>
               <ul class="up-down-sorting">
-                <li><a class="sorting-down" href="#"><img
+                <li class=" list-parametr current-parametr"><a class="sorting-down" href="#"><img
                   src="img/icon-down-dir.svg" alt="Сортировка по убыванию"></a></li>
-                <li><a class="sorting-up" href="#"><img src="img/icon-up-dir.svg"
+                <li class="list-parametr"><a class="sorting-up" href="#"><img src="img/icon-up-dir.svg"
                   alt="По возрастанию"></a></li>
               </ul>
             </nav>
@@ -190,7 +190,7 @@
             </ul>
             <ul class="pagination-list">
               <li class="pagination-item  pagination-item-current"><a href="#">1</a></li>
-              <li class="pagination-item"><a>2</a></li>
+              <li class="pagination-item"><a href="#">2</a></li>
               <li class="pagination-item"><a href="#">3</a></li>
               <li class="pagination-item"><a href="#">Следующая</a></li>
             </ul>
@@ -250,26 +250,28 @@
             сетей.</p>
         </div>
     </footer>
-    <section class="pop-up visually-hidden">
+    <section class="modal">
       <h2>Напишите нам</h2>
       <form action="https://echo.htmlacademy.ru" method="post">
-        <p>
-          <label for="field-name">Ваше имя:</label><br>
+        <p class="modal-field-name">
+          <label for="field-name">Ваше имя:</label>
           <input type="text" name="name" placeholder="Имя Фамилия"
             id="field-name">
         </p>
-        <p>
+        <p class="modal-field-email">
           <label for="field-email">Ваш e-mail:</label>
           <input type="email" name="email" placeholder="email@example.com"
             id="field-email">
         </p>
-        <p>
+        <p class="modal-field-letter">
           <label for="field-letter">Текст письма:</label>
-          <input type="text" name="letter" placeholder="В свободной форме"
-            id="field-letter">
+          <textarea name="letter" placeholder="В свободной форме"
+            id="field-letter"></textarea>
         </p>
-        <button type="submit">Отправить</button>
+        <button class="button" type="submit">Отправить</button>
       </form>
+      <button class="modal-close" type="button">
+      </button>
     </section>
   </body>
 </html>
