Забыл добавить скрипт на внутренню страницу

--- a/catalog.html
+++ b/catalog.html
@@ -212,7 +212,7 @@
               ул. Б. Конюшенная, д. 19/8
             </p>
             <p>тел. +7 (812) 275-75-75</p>
-            <button class="button" type="button">Напишите нам</button>
+            <button class="button modal-open" type="button">Напишите нам</button>
           </div>
         </div>
       </section>
@@ -273,5 +273,6 @@
       <button class="modal-close" type="button">
       </button>
     </section>
+    <script src="js/modal.js"></script>
   </body>
 </html>
