--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <section class="statistic">
               <h2 class="visually-hidden">Статистика</h2>
               <div class="statistic-item">
+                <img src="img/nerds-picture.png" alt="Логотип Нёрдс" width="360" height="208">
                 <p>С 2004 года любим точность во всём:</p>
                 <table>
                   <tr class="statistic-percent">
