Сделал переключатель и поправил ПП

--- a/catalog.html
+++ b/catalog.html
@@ -199,17 +199,16 @@
       </div>
       <section class="adress-and-contacts">
         <h2 class="visually-hidden">Адрес и контакты</h2>
-      <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
-    появится настоящая карта -->
+        <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
+      появится настоящая карта -->
         <img src="img/map.png" alt="Карта" width="1440" height="416">
         <div class="map-container">
           <img class="map-marker" src="img/map-marker.png" alt="Указатель"
             width="231" height="190">
           <div class="studio-contacts">
             <h3 class="studio-label">Nёrds design studio</h3>
-            <p>
-              191186, Санкт-Петербург,<br>
-              ул. Б. Конюшенная, д. 19/8
+            <p class="studio-adress">
+            191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             </p>
             <p>тел. +7 (812) 275-75-75</p>
             <button class="button modal-open" type="button">Напишите нам</button>
