--- a/index.html
+++ b/index.html
@@ -32,31 +32,39 @@
     <main>
       <h1 class="visually-hidden">Студия "Нёрдс"</h1>
       <div class="slider">
+        <div class="slider-switch">
+          <input type="radio" id="btn-1" name="toggle" checked>
+          <label for="btn-1"></label>
+          <input type="radio" id="btn-2" name="toggle">
+          <label for="btn-2"></label>
+          <input type="radio" id="btn-3" name="toggle">
+          <label for="btn-3"></label>
+        </div>
         <div class="slider-wrapper">
-            <div class="slider-item">
-              <div class="slider-item-description">
-                <h3>Долго, дорого,<br> скурпулезно.</h3>
-                <p>Математически выверенный дизайн<br> для вашего сайта или
-                  мобильного приложения.</p>
-                <a class="button" href="catalog.html">Узнать больше</a>
-              </div>
+          <div class="slider-item">
+            <div class="slider-item-description">
+              <h3>Долго, дорого,<br> скрупулезно.</h3>
+              <p>Математически выверенный дизайн<br> для вашего сайта или
+                мобильного приложения.</p>
+              <a class="button" href="catalog.html">Узнать больше</a>
             </div>
-            <div class="slider-item visually-hidden">
-              <div class="slider-item-description">
-                <h3>Любим математику как никто другой.</h3>
-                <p>Никакого креатива, только математические формулы для расчета
-                  идеальных пропорций.</p>
-                <a class="button" href="catalog.html">Узнать больше</a>
-              </div>
+          </div>
+          <div class="slider-item visually-hidden">
+            <div class="slider-item-description">
+              <h3>Любим математику как никто другой.</h3>
+              <p>Никакого креатива, только математические формулы для расчета
+                идеальных пропорций.</p>
+              <a class="button" href="catalog.html">Узнать больше</a>
             </div>
-            <div class="slider-item visually-hidden">
-              <div class="slider-item-description">
-                <h3>Только ночь,<br> только хардкор</h3>
-                <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи
-                  работа только начинается.</p>
-                <a class="button" href="catalog.html">Узнать больше</a>
-              </div>
+          </div>
+          <div class="slider-item visually-hidden">
+            <div class="slider-item-description">
+              <h3>Только ночь,<br> только хардкор</h3>
+              <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи
+                работа только начинается.</p>
+              <a class="button" href="catalog.html">Узнать больше</a>
             </div>
+          </div>
         </div>
       </div>
       <div class="container">
@@ -64,57 +72,58 @@
           <h2 class="visually-hidden">Наши услуги</h2>
           <ul class="advantages">
             <li class="advantages-item">
+              <img src="img/advantage-red.png" alt="Карточка веб-сайта" width="300" height="146">
               <h3>Веб-сайты</h3>
               <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
               <a class="button" href="#">Заказать</a>
             </li>
             <li class="advantages-item">
+              <img src="img/advantage-green.png" alt="Карточка приложений" width="300" height="146">
               <h3>Приложения</h3>
               <p>Покорите топ-10 приложений в AppStore и Google Play</p>
               <a class="button" href="#">Заказать</a>
             </li>
             <li class="advantages-item">
+              <img src="img/advantage-yellow.png" alt="Карточка презентаций" width="300" height="146">
               <h3>Презентации</h3>
               <p>Вы даже не подозреваете, насколько вы изумительны!</p>
               <a class="button" href="#">Заказать</a>
             </li>
           </ul>
         </section>
-        <div class="main-information">
-          <div class="main-information-wrapper">
-            <section class="short-description">
-              <h2>Мы - маленькая, но гордая дизайн-студия
-                из Краснодара.</h2>
-              <p class="description">Исповедуем принципы минимализма и чистоты.
-                Ставим математеческий расчет превыше креатива. Работаем не покладая
-                  рук, как роботы.</p>
-              <h3 class="description-service-heading">Выполняем заказы на разработку:</h3>
-              <ul class="description-service">
-                <li>Веб-сайтов любой сложности</li>
-                <li>Мобильных приложений для iOS и Android</li>
-                <li>Слайдшоу и видео для корпоративных презентаций</li>
-              </ul>
-            </section>
-            <section class="statistic">
-              <h2 class="visually-hidden">Статистика</h2>
-              <div class="statistic-item">
-                <img src="img/nerds-picture.png" alt="Логотип Нёрдс" width="360" height="208">
-                <p>С 2004 года любим точность во всём:</p>
-                <table>
-                  <tr class="statistic-percent">
-                    <td>146<sup>%</sup></td>
-                    <td>100<sup>%</sup></td>
-                    <td>50<sup>%</sup></td>
-                  </tr>
-                  <tr class="statistic-description">
-                    <td>Уровень самоотдачи</td>
-                    <td>Соблюдение сроков</td>
-                    <td>Минимальная предоплата</td>
-                  </tr>
-                </table>
-              </div>
-            </section>
-          </div>
+        <div class="main-information-wrapper">
+          <section class="short-description">
+            <h2>Мы — маленькая, но гордая дизайн-студия
+              из Краснодара.</h2>
+            <p class="description">Исповедуем принципы минимализма и чистоты.
+              Ставим математеческий расчет превыше креатива. Работаем не покладая
+              рук, как роботы.</p>
+            <h3 class="description-service-heading">Выполняем заказы на разработку:</h3>
+            <ul class="description-service">
+              <li>Веб-сайтов любой сложности</li>
+              <li>Мобильных приложений для iOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </section>
+          <section class="statistic">
+            <h2 class="visually-hidden">Статистика</h2>
+            <div class="statistic-item">
+              <img src="img/nerds-picture.png" alt="Логотип Нёрдс" width="360" height="208">
+              <p>С 2004 года любим точность во всём:</p>
+              <table>
+                <tr class="statistic-percent">
+                  <td>146<sup><span class="percent-style">%</span></sup></td>
+                  <td>100<sup><span class="percent-style">%</span></sup></td>
+                  <td>50<sup><span class="percent-style">%</span></sup></td>
+                </tr>
+                <tr class="statistic-description">
+                  <td>Уровень самоотдачи</td>
+                  <td>Соблюдение сроков</td>
+                  <td>Минимальная предоплата</td>
+                </tr>
+              </table>
+            </div>
+          </section>
         </div>
         <section class="section-partners">
           <h2 class="visually-hidden">Список партнеров</h2>
@@ -156,9 +165,8 @@
             width="231" height="190">
           <div class="studio-contacts">
             <h3 class="studio-label">Nёrds design studio</h3>
-            <p>
-                191186, Санкт-Петербург,<br>
-                ул. Б. Конюшенная, д. 19/8
+            <p class="studio-adress">
+            191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             </p>
             <p>тел. +7 (812) 275-75-75</p>
             <button class="button modal-open" type="button">Напишите нам</button>
