--- a/catalog.html
+++ b/catalog.html
@@ -136,7 +136,9 @@
                 <div class="example-item-information">
                   <a class="example-item-label" href="#">Sedona</a>
                   <p class="example-item-description">Информационный сайт для
-                    туристов</p>
+                    туристов Информационный сайт для
+                      туристов Информационный сайт для
+                        туристов</p>
                   <p class="button example-item-price">9 900 руб.</p>
                 </div>
               </li>
