Данные, как в макете

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
             <li class="advantages-item">
               <img src="img/advantage-yellow.png" alt="Карточка презентаций" width="300" height="146">
               <h3>Презентации</h3>
-              <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+              <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
               <a class="button" href="#">Заказать</a>
             </li>
           </ul>
         </section>
         <div class="main-information-wrapper">
           <section class="short-description">
-            <h2>Мы — маленькая, но гордая дизайн-студия
-              из Краснодара.</h2>
+            <h2>Мы — маленькая, но гордая дизайн-студия из Краснодара.
+            </h2>
             <p class="description">Исповедуем принципы минимализма и чистоты.
               Ставим математеческий расчет превыше креатива. Работаем не покладая
               рук, как роботы.</p>
