Исправил косяк в размере изображений

--- a/catalog.html
+++ b/catalog.html
@@ -122,9 +122,9 @@
               </ul>
               <ul class="up-down-sorting">
                 <li class=" list-parametr current-parametr"><a class="sorting-down" href="#"><img
-                  src="img/icon-down-dir.svg" width="11px" height="10px"
+                  src="img/icon-down-dir.svg" width="11" height="10"
                   alt="Сортировка по убыванию"></a></li>
-                <li class="list-parametr"><a class="sorting-up" href="#"><img src="img/icon-up-dir.svg" width="11px" height="10px" alt="По возрастанию"></a></li>
+                <li class="list-parametr"><a class="sorting-up" href="#"><img src="img/icon-up-dir.svg" width="11" height="10" alt="По возрастанию"></a></li>
               </ul>
             </nav>
           </section>
